--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^4.4.1",
-    "connect-session-firebase": "^5.13.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -26,13 +24,11 @@
     "firebase-admin": "^9.8.0",
     "hbs": "^4.1.1",
     "http-errors": "^1.8.0",
-    "js-base64": "^3.6.0",
     "moment": "^2.29.1",
     "moment-parseformat": "^4.0.0",
     "mongo-store": "0.0.2",
     "mongoose": "^5.12.3",
-    "node-fetch": "^2.6.1",
-    "s3-bucket": "^1.0.3"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
